# cmake-compile-features

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  ccf-program.cpp  ccf.cpp  ccf.hpp  checkCXXFeatures.cc.in
.github/workflows/: ci.yml
ccf/: ccf.cpp  ccf.hpp
ccf/detail/: ccf_stdlib_support.hpp.in
cmake/: CheckCXXFeature.cmake  CheckCXXStandardLibrary.cmake  CheckCXXStdLib.cpp  EnumeratedOption.cmake  IntelCompileFeatures.cmake  MSVCCompileFeatures.cmake  ccf-config.cmake.in  check_cxx_attributes.cc  check_cxx_auto_return_type.cc  check_cxx_constexpr_if.cc  check_cxx_ctad.cc  check_cxx_filesystem.cc  check_cxx_generic_lambda.cc  check_cxx_has_include.cc  check_cxx_init_if.cc  check_cxx_inline_variables.cc  check_cxx_make_unique.cc  check_cxx_relaxed_constexpr.cc  check_cxx_structured_bindings.cc  cxx11-test-cxx_thread_thread.cpp
